# json2asw-platformio

./: .gitignore  .gitmodules  .irish2_samples.cpp.swp  CMakeLists.txt  README.md  audio_defs.h  get-sizes  instrument.json  irish2_samples.cpp  irish2_samples.h  library.json  library.properties  main.cpp  parser.cpp  rewrite-instrument  sample-code.cpp  sample_data.h  sizes  sizes-code
examples/platformio/: platformio.ini
examples/platformio/src/: main.cpp  pugwash.h
include/: CSDcard.h  instrument.h  utils.h
platformio/: .gitignore  platformio.ini
platformio/bin2sf/: platformio.ini
platformio/src/: audio_defs.h  instrument.cpp  instrument.h  main.cpp  mylog.h  non-const-sample-metadata.h  sample_data.h  utils.cpp
src/: CSDcard.cpp
tools/: CMakeLists.txt  irish2_samples.cpp  irish2_samples.h  sample_data.h
